# pack-league

./: .gitignore  README.md  config.json  events-seed.json  events-sources.json  manifest.json  release.sh
.github/workflows/: release.yml  release.yml.disabled
daemon/: Cargo.toml
daemon/src/: error.rs  events.rs  game_finalizer.rs  gameflow_monitor.rs  integration.rs  lcu.rs  lcu_websocket.rs  lib.rs  live_client.rs  live_match_service.rs  main.rs  poller.rs  protocol.rs  sample_data.rs  state.rs  triggers.rs
daemon/src/types/: game_mode.rs  live_match.rs  match_data.rs  mod.rs  settings.rs
frontend/: LiveMatchCard.tsx  MatchCard.tsx  SmartLiveMatchCard.tsx  SmartMatchCard.tsx  TFTLiveMatchCard.tsx  TFTMatchCard.tsx  ci.test.ts  index.ts  package.json  pnpm-lock.yaml  tsconfig.json  types.ts  vite.config.ts
frontend/components/: ConnectionStatus.tsx  DDragonStatus.tsx  GameIcon.tsx  SummonerBadge.tsx
frontend/components/ui/: button.tsx  tooltip.tsx
frontend/hooks/: useDDragon.ts  useLeagueConnection.ts
frontend/lib/: animations.ts  constants.ts  ddragon.ts  formatters.ts  image-cache.ts  live-client.ts
frontend/packs/: types.ts
