[package]
name = "pack-league-daemon"
version = "0.1.0"
description = "League of Legends game pack daemon"
edition = "2021"

[[bin]]
name = "daemon"
path = "src/main.rs"

[lib]
name = "league_integration"
path = "src/lib.rs"

[dependencies]
# Shared protocol types from main companion app
# Use local path for development, switch to git/crates.io for releases
companion-pack-protocol = { path = "../../league-companion/crates/pack-protocol" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async trait support
async-trait = "0.1"

# LCU HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# LCU WebSocket (real-time gameflow events)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
rustls = "0.23"

# Auth encoding for LCU
base64 = "0.22"

# Lockfile parsing
regex = "1"

# UUID generation
uuid = { version = "1", features = ["v4"] }
